2003-07-17  Nick Clifton  <nickc@redhat.com>

	* objdump.c (main): Issue a warning message if multiple -M
	switches are used.
	
	* doc/binutils.texi (objdump): Update documentation about -M
	option.
	
2003-07-17  Nick Clifton  <nickc@redhat.com>

	* po/es.po: New Spanish translation.

2003-07-11  Alan Modra  <amodra@bigpond.net.au>

	* po/binutils.pot: Regenerate.

2003-07-05  Christopher Faylor  <cgf@redhat.com>

	* dlltool.c (prefix_encode): Use a fixed length for alpha.

2003-07-04  Christopher Faylor  <cgf@redhat.com>

	* dlltool.c (prefix_encode): New function.  Encode temp file prefix
	from pid.
	(dlltmp): Pass address of pointer being alloced or suffer neverending
	mallocs.
	(make_one_lib_file): Allocate enough space for new longer stub names.
	(gen_lib_file): Ditto.
	(main): Generate the temp file prefix from the pid if prefix was not
	specified on the command line.

2003-07-04  Nick Clifton  <nickc@redhat.com>

	* readelf.c (get_data): Print (unsigned) hex values for size and
	offset in error messages.
	(process_section_headers): If the string table could not be
	allocated, do not continue.

2003-07-01  Jakub Jelinek  <jakub@redhat.com>

	* readelf.c (dynamic_segment_ia64_val): Print address and newline
	for sections by default.  Comment fix.

2003-06-28  Danny Smith  <dannysmith@users.sourceforge.net>

	* rcparse.y (res_text_field): New res_id variable.
	(res_null_text): New static const struct res_id object,
	with empty unicode name field.
	(control): Pop parsing of optresidc up one level. Set
	res_text_field to $2 except for controls which do not accept
	a text field.  Set res_text_field to res_null_text for the
	special cases (viz. COMBOBOX, EDITTEXT, LISTBOX, SCROLLBAR).
	(control_params): Adjust to use res_text_field rather
	than optresidc.
	(COMBOBOX): Add comment about discrepency between documented
	vs. observed default style.
	* resrc.c (define_control): Make first param const.
	* windres.h (define_control): Adjust prototype.
