@@ -2661,12 +2661,10 @@ main (argc, argv)
 	  break;
 	case 'M':
 	  if (disassembler_options)
-	    {
-	      non_fatal ("multiple separate -M options are not supported.");
-	      non_fatal ("please combine them into a single, space separated option.");
-	      non_fatal ("ignoring option '-M%s'", disassembler_options);
-	    }
-	  disassembler_options = optarg;
+	    /* Ignore potential memory leak for now.  */
+	    disassembler_options = concat (disassembler_options, ",", optarg, NULL);
+	  else
+	    disassembler_options = optarg;
 	  break;
 	case 'j':
 	  if (only == NULL)
